Finished refactoring translated strings and arabic translations.

--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -185,4 +185,207 @@
     <string name="permission_storage_rationale">تحتاج إلى تمكين إذن الكتابة.</string>
     <string name="permissions">أذونات</string>
     <string name="phone">هاتف</string>
+    <string name="playlist">قائمة التشغيل</string>
+    <string name="posts">منشورات الحائط</string>
+    <string name="profile">ملف المستخدم</string>
+    <string name="public_chats">المحادثات العلنية</string>
+    <string name="public_chats_profile">المحادثات العلنية</string>
+    <string name="public_chats_your_friends_are_in">المحادثات العلنية</string>
+    <string name="quiz_caption">أحجية</string>
+    <string name="read_more">اقرأ أكثر</string>
+    <string name="registration_error">فشل التسجيل</string>
+    <string name="registration_error_username_taken">فشل التسجيل</string>
+    <string name="remove_friend">إلغاء الصداقة</string>
+    <string name="rename_your_chat">إعادة تسمية المحادثة</string>
+    <string name="report_abuse">التبليغ عن انتهاك</string>
+    <string name="request">طلبات</string>
+    <string name="request_pending">الطلب بالانتظار</string>
+    <string name="requested_on">طلب على</string>
+    <string name="reset">إعادة ضبط كلمة السر</string>
+    <string name="reset_app">ستقوم بإعادة تشغيل التطبيق بهذا الفعل..</string>
+    <string name="rewards_and_items_received">الجوائز والعناصر المتلقاة من حقائب الجيم</string>
+    <string name="rumors_fragment_caption">إشاعات الويب</string>
+    <string name="rumour">إشاعات</string>
+    <string name="rumours_caption">إشاعات</string>
+    <string name="save">وفر</string>
+    <string name="search">بحث في</string>
+    <string name="search_for_member">لبحث في أصدقائك</string>
+    <string name="search_public_chats">البحث في المحادثات العلنية</string>
+    <string name="search_wall_posts_hint">بحث في</string>
+    <string name="search_your_friends">البحث في أصدقائك</string>
+    <string name="select_friends_to_call">البحث في أصدقائك</string>
+    <string name="share_using">مشاركة</string>
+    <string name="shop">تسوق</string>
+    <string name="shop_caption">تسوق</string>
+    <string name="shop_fragment_caption">تسوق</string>
+    <string name="sign_in">تسجيل الدخول</string>
+    <string name="sign_in_with_facebook">التسجيل باستخدام فيسبوك</string>
+    <string name="sign_up_email">البريد الالكتروني</string>
+    <string name="sign_up_facebook">التسجيل باستخدام فيسبوك</string>
+    <string name="sign_up_first_name">الاسم الأول</string>
+    <string name="sign_up_last_name">الاسم الأخير</string>
+    <string name="sign_up_or">أو</string>
+    <string name="sign_up_password">كلمة السر</string>
+    <string name="sign_up_phone">هاتف</string>
+    <string name="sign_up_sign_up">التسجيل</string>
+    <string name="sign_up_text">بقيامك بالتسجيل، توافق على ما تطرحه  Fanscart\'\"s <font color="@android:color/white">من شروط للاستخدام</font> و <font color="@android:color/white">سياسة الخصوصية.</font></string>
+    <string name="sign_up_username">لأخير</string>
+    <string name="start_call">بدء الاتصال</string>
+    <string name="starting_new_call_search_hint">البحث في المحادثات العلنية</string>
+    <string name="starting_new_call_search_title">بدء اتصال جديد</string>
+    <string name="stash">خزنتك</string>
+    <string name="statistics_caption">إحصائيات</string>
+    <string name="stats">إحصائيات</string>
+    <string name="store">المتجر</string>
+    <string name="store_big">المتجر</string>
+    <string name="subscribed_since">مسجل منذ</string>
+    <string name="telephone_no">رقم الهاتف</string>
+    <string name="terms_and_privacy">الشروط والخصوصية</string>
+    <string name="this_chat_is_private">هذه المحادثة خاصة</string>
+    <string name="this_chat_is_private_phone">هذه المحادثة خاصة</string>
+    <string name="this_chat_is_public">هذه المحادثة علنية</string>
+    <string name="this_chat_is_public_phone">هذه المحادثة علنية</string>
+    <string name="this_language">عربى</string>
+
+    <string name="tip_0_text">اضغط هنا لتسجيل الدخول والاستمتاع بكافة ميزات التطبيق</string>
+    <string name="tip_1_text">جرب متابعة حساب Sporting الرسمي.</string>
+    <string name="tip_1_title">كيف تتابع حساب Sporting الرسمي</string>
+    <string name="tip_1_description">أهلاً بكم في Sport Sidekick! لنبدأ بمتابعة حساب Sporting الرسمي. الحسابات الرسمية يملكها لاعبون، ومدراء، وممثلون رسميون آخرون عن النادي. متابعتهم تعني أنك سترى تحديثاتهم على حائطك..</string>
+    <string name="tip_1_end">تهانيناً قمت بمتابعة حساب Spoting CP الرسمي، وستظهر منشوراتهم على حائطك.</string>
+    <string name="tip_1_step_1">أظهر جهات اتصالك بالنقر على أيقونة الأصدقاء في الزاوية اليمنى السفلى من الشاشة..</string>
+    <string name="tip_1_step_2">انقر على أيقونة Sporting CP لتفتح لوحة تفاصيله.</string>
+    <string name="tip_1_step_3">غير وضعية المتابعة إلى فعالة.</string>
+    <string name="tip_3_text">جرب مشاهدة فيديو على تلفاز النادي</string>
+    <string name="tip_3_title">كيف تشاهد فيديو على تلفاز النادي؟</string>
+    <string name="tip_3_description">تلفاز النادي هو المكان الذي تشاهد فيه برامج Sporting TV، وإليك كيفية المشاهدة.</string>
+    <string name="tip_3_end">يمكنك مشاركة الفيديوهات على حائطك وفي المحادثات أيضاً.</string>
+    <string name="tip_3_step_1">افتح موديول تلفاز النادي بالنقر على تبويبة تلفاز النادي في الزاوية اليمنى السفلى من الشاشة.</string>
+    <string name="tip_3_step_2">انقر على قناةٍ ما.</string>
+    <string name="tip_3_step_3">انقر على قائمةٍ ما.</string>
+    <string name="tip_3_step_4">انقر الفيديو الذي ترغب بمشاهدته.</string>
+    <string name="tip_4_text">جرب قراءة مقالة إخبارية.</string>
+    <string name="tip_4_title">كيفية قراءة المقالات الإخبارية</string>
+    <string name="tip_4_description">فلتبق على اطلاع على آخر أخبار Sporting، وإليك كيفية الاطلاع على مقالة.</string>
+    <string name="tip_4_end">يمكنك مشاركة منشورات الأخبار على الحائط أو المحادثة، أو ترك تعليق تحت أي منشور.</string>
+    <string name="tip_4_step_1">افتح موديول الأخبار بالنقر على تبويبة الأخبار في الزاوية العليا اليسرى للشاشة.</string>
+    <string name="tip_4_step_2">انقر منشوراً إخبارياً.</string>
+    <string name="tip_4_step_3">عندما تنتهي، يمكنك السحب يساراً أو النقر على زر الإغلاق للعودة إلى كافة المنشورات الإخبارية.</string>
+    <string name="tip_5_text">جرب قراءة إشاعةٍ ما.</string>
+    <string name="tip_5_title">كيفية قراءة الإشاعات</string>
+    <string name="tip_5_description">بسست.. هل سمعت عن موديول الإشاعات؟ يعطيك كافة الإشاعات حول الانتقالات، وإليك كيفية استعراضه.</string>
+    <string name="tip_5_end">يمكنك مشاركة الإشاعات على الحائط أو في المحادثات.</string>
+    <string name="tip_5_step_1">افتح موديول الإشاعات بالضغط على تبويبة الإشاعات في الزاوية العليا اليسرى من الشاشة.</string>
+    <string name="tip_5_step_2">الإشاعات الأحدث تظهر في الأعلى. اضغط على إشاعة لقراءة المزيد..</string>
+    <string name="tip_6_text">جرب قراءة الإحصائيات.</string>
+    <string name="tip_6_title">كيفية قراءة الإحصائيات</string>
+    <string name="tip_6_description">كم من الأهداف سجل جويل كامبل؟ ما احتمال الفوز في المباراة القادمة؟ إليك كيفية إظهار وقراءة الإحصائيات..</string>
+    <string name="tip_6_end">يمكنك مشاركة الإحصائيات على الحائط أو في المحادثات.</string>
+    <string name="tip_6_step_1">افتح موديول الإحصائيات بالنقر على تبويبة المحادثة في القسم الأيمن الأعلى من الشاشة.</string>
+    <string name="tip_6_step_2">اضغط على جدول لتوسيعه.</string>
+    <string name="tip_6_step_3">اضغط أياً من الإحصائيات للتفاصيل.</string>
+    <string name="tip_7_text">إعداد ملفك.</string>
+    <string name="tip_7_title">كيفية إعداد ملفك</string>
+    <string name="tip_7_description">إعداد بيانات الاتصال، ملء محفظتك بالنقود، ومراقبة ثروتك - قم بكل هذا من ملفك الشخصي.</string>
+    <string name="tip_7_end">تباهى بالشارات في ثروتك بمشاركتها على الحائط أو في المحادثات!</string>
+    <string name="tip_7_step_1">انقر على ملفك في الزاوية اليسرى السفلى من الشاشة.</string>
+    <string name="tip_7_step_2">انقر زر التعديل لتغيير بيانات التواصل.</string>
+    <string name="tip_7_step_3">اضغط تبويبة المحفظة لرؤية وشراء المزيد.</string>
+    <string name="tip_7_step_4">اضغط تبويبة الثروة لرؤية مجموعاتك من الشارات والإنجازات.</string>
+    <string name="tip_8_text">جرب إضافة صديق.</string>
+    <string name="tip_8_title">كيفية إضافة صديق</string>
+    <string name="tip_8_description">Sport Sidekick تتمحور حول أصدقائك! تفقد كيفية إضافة صديق.</string>
+    <string name="tip_8_end">Sport Sidekick أفضل مع الأصدقاء! جرب إضافة المزيد من الأصدقاء ومتابعتهم لرؤية منشوراتهم على حائطك.</string>
+    <string name="tip_8_step_1">انقر أيقونة الأصدقاء على الزاوية السفلى اليمنى من الشاشة.</string>
+    <string name="tip_8_step_2">انقر زر الإضافة.</string>
+    <string name="tip_8_step_3">أدخل اسم صديقك، أو بريده، أو هاتفه.</string>
+    <string name="tip_8_step_4">عند ظهور صديقك، انقر زر الإضافة.</string>
+    <string name="tip_8_step_5">إن لم يكن صديقك يلعب SSK، استخدم تبويبة الدعوة وأدخل ريده لإرسال دعوة له!</string>
+    <string name="tip_9_text">جرب إنشاء محادثة مع أصدقائك.</string>
+    <string name="tip_9_title">كيفية إنشاء محادثة مع الأصدقاء</string>
+    <string name="tip_9_description">يمكن للمحادثة أن تكون بينك وبين شخص واحد أو مجموعة من الأشخاص. إليك كيفية إعداد محادثة لإلقاء تحية على الصديق.</string>
+    <string name="tip_9_end">بصفتك منشئ المحادثة، يمكنك إعادة تسميتها، ودعوة الأعضاء، وحظرهم من المحادثة.</string>
+    <string name="tip_9_step_1">افتح موديول المحادثة بالضغط على تبويبة المحادثة في أعلى يمين الشاشة.</string>
+    <string name="tip_9_step_2">انقر زر \'إنشاء/انضمام\' في لوحة المجموعات.</string>
+    <string name="tip_9_step_3">في تبويبة إنشاء محادثة، أدخل اسماً لمحادثتك.</string>
+    <string name="tip_9_step_4">أدخل أصدقاءك في المحادثة بالنقر عليهم (النقر مجدداً سيعني إزالتهم).</string>
+    <string name="tip_9_step_5">المحادثات خاصة بوضعها الافتراضي، وإن أردت إنشاء محادثة علنية، يمكنك النقر على الزر (ملاحظة: عندما تحول المحادثة إلى خاصة لا يمكن جعلها علنية).</string>
+    <string name="tip_9_step_6">انقر زر التأكيد وسيتم اصطحابك إلى محادثتك الجديدة!</string>
+    <string name="tip_10_text">جرب النشر على الحائط.</string>
+    <string name="tip_10_title">كيفية النشر على الحائط</string>
+    <string name="tip_10_description">النشر على الحائط سيظهر على جدران أصدقائك المتابعين لك، إليك كيفية القيام بذلك.</string>
+    <string name="tip_10_end">احذف المنشورات بالسحب يميناً عليهم ثم نقر أيقونة الحذف.</string>
+    <string name="tip_10_step_1">افتح موديول الأخبار بالنقر على تبويبة الأخبار في أعلى يسار الشاشة.</string>
+    <string name="tip_10_step_2">اسحب يميناً على عنصر حائط لإظهار القائمة.</string>
+    <string name="tip_10_step_3">انقر لمشاركة الأيقونة.</string>
+    <string name="tip_10_step_4">أكد رغبتك بمشاركة المنشور على حائطك.</string>
+    <string name="tip_11_text">جرب محادثة الفيديو مع الأصدقاء.</string>
+    <string name="tip_11_title">كيفية القيام بمحادثة فيديو مع الأصدقاء</string>
+    <string name="tip_11_description">قوموا بعيش الحدث معاً! يمكنك فتح محادثة فيديو مع حتى 3 أصدقاء.</string>
+    <string name="tip_11_end">الأهداف أفضل عندما يمكنك مشاهدة ردود أفعال أصدقائك!</string>
+    <string name="tip_11_step_1">افتح موديول محادثة الفيديو بالنقر عليهم (النقر عليهم مجدداً سوف يزيلهم).</string>
+    <string name="tip_11_step_2">أضف الأصدقاء على المحادثة بالنقر عليهم (النقر عليهم مجدداً سوف يزيلهم)</string>
+    <string name="tip_11_step_3">انقر زر الاتصال.</string>
+    <string name="tip_12_text">جرب تثبيت عنصر على الحائط.</string>
+    <string name="tip_12_title">كيفية تثبيت عنصر على الحائط</string>
+    <string name="tip_12_description">هل تحب منشوراً معيناً؟ ثبته على الحائط إذاً!</string>
+    <string name="tip_12_end">تهانينا! سيتم تثبيت هذا المنشور على رأس حائطك حتى تحذفه. قم بحذف المنشور بالسحب يميناً عليه ثم نقر أيقونة الحذف.</string>
+    <string name="tip_12_step_1">إذا كنت تحب عنصر حائطٍ ما حقاً، وتريد إبقاءه أعلى الحائط، إليك كيفية تثبيته، وإذا لم ترغب بذلك، سيتم إزالته بعد عدة أيام (ملاحظة: التثبيت يكلف نقوداً)</string>
+    <string name="tip_12_step_2">افتح موديول الحائط بالنقر على تبويبة الحائط في أعلى يسار الشاشة.</string>
+    <string name="tip_12_step_3">امسح يساراً على عنصر حائط لإظهار القائمة.</string>
+    <string name="tip_12_step_4">انقر أيقونة التثبيت.</string>
+    <string name="tip_12_step_5">أكد رغبتك بإنفاق 1 لتثبيت العنصر.</string>
+    <string name="tip_13_text">جرب زيارة السوق.</string>
+    <string name="tip_13_title">كيفية زيارة السوق</string>
+    <string name="tip_13_description">تفقد آخر بضائع Sporting في السوق.</string>
+    <string name="tip_13_end">يمكنك الملاحة للأمام والخلف باستخدام القائمة في أسفل موديول السوق.</string>
+    <string name="tip_13_step_1">افتح السوق بالضغط على تبويبة التسوق في أعلى يسار الشاشة.</string>
+    <string name="tip_13_step_2">يمكنك الملاحة للأمام والخلف باستخدام القائمة في أسفل موديول السوق.</string>
+    <string name="tip_2_title">كيف تنضم إلى محادثة Sporting الرسمية</string>
+    <string name="to_access_full_features">للحصول على كافة الميزات...</string>
+    <string name="try_again_latter">الرجاء المحاولة مجدداً!</string>
+    <string name="tutorial_earn">اضغط هنا لتربح لعرض هذه الكيفية!</string>
+    <string name="unnamed_chat">غير مسمى</string>
+    <string name="un_friend_title">إزالة صديق سيوقف متابعتكما لبعضكم</string>
+    <string name="un_friend_message">" البعض. هل أنت متأكد من إزالة هذا الصديق؟"</string>
+    <string name="up_next">التالي</string>
+    <string name="uploading">تحميل…</string>
+    <string name="user">المستخدم</string>
+    <string name="user_name">اسم المستخدم</string>
+    <string name="user_profile">ملف المستخدم</string>
+    <string name="value">القيم</string>
+    <string name="video_chat">محادثة فيديو</string>
+    <string name="video_chat_accept_call">الإجابة على الاتصال؟</string>
+    <string name="video_chat_button_text">بدء اتصالك</string>
+    <string name="video_chat_caption">محادثة فيديو</string>
+    <string name="video_chat_fragment_caption">محادثة فيديو</string>
+    <string name="video_chat_maximum">عذراً، يمكنك الاتصال بالفيديو بـ 3 أشخاص كحد أقصى، وهذه المحادثة ممتلئة مسبقاً!</string>
+    <string name="video_chat_permission_microphone_and_camera_denied">يجب تمكين الميكروفون والكاميرا في الإعدادات لاستخدام الدردشة المرئية</string>
+    <string name="video_chat_permission_microphone_and_camera_rationale">يرجى تمكين الميكروفون والكاميرا من أجل استخدام الدردشة المرئية.</string>
+    <string name="video_chat_permission_microphone_never_ask">لا تطلب إذن تسجيل الصوت والفيديو مرة أخرى.</string>
+    <string name="video_chat_receive_call">تتلقى اتصالاً من</string>
+    <string name="video_chat_text_1"><![CDATA[ المباراة مع الخاص بك <font color="#c3ff01">اصحاب.</font>]]></string>
+    <string name="video_chat_text_1_phone">المباراة مع الخاص بك <font color="#c3ff01">اصحاب.</font></string>
+    <string name="video_chat_text_2">تسمح لك محادثة الفيديو بالاتصال بحتى 3 أصدقاء لمحادثة فيديو جماعية مع الأصدقاء، لتستطيع مشاركة الأحداث مع الأشخاص الذين تحبهم؛ أينما كنت!</string>
+    <string name="video_chat_you">أنت</string>
+    <string name="video_chats">محادثات الفيديو</string>
+    <string name="videos_watched">الفيديوهات المشاهدة</string>
+    <string name="vs">ضد</string>
+    <string name="waiting_for_active_internet_connection">في انتظار اتصال إنترنت نشط</string>
+    <string name="wall_caption">جدار</string>
+    <string name="wall_fragment_caption">جدار</string>
+    <string name="wall_posts">منشورات الحائط</string>
+    <string name="wall_text_for_post">اكتب منشورك هنا.</string>
+    <string name="wallet">المحفظة</string>
+    <string name="what_would_you_like_to_do">بماذا ترغب؟</string>
+    <string name="write_post_hint">اكتب منشورك هنا.</string>
+    <string name="you">أنت</string>
+    <string name="you_have">لديك</string>
+    <string name="your_chat_name">قم بتسمية محادثتك</string>
+    <string name="your_friends_request">طلبات الصداقة</string>
+    <string name="your_friends_search_hint">البحث في أصدقائك</string>
+    <string name="your_friends_title">أصدقاؤك</string>
+    <string name="your_profile">ملفك الشخصي</string>
+    <string name="your_stash">خزنتك</string>
+    <string name="your_statement">تصريحك</string>
+    <string name="your_wallet">المحفظة</string>
 </resources>
