--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -388,4 +388,5 @@
     <string name="your_stash">خزنتك</string>
     <string name="your_statement">تصريحك</string>
     <string name="your_wallet">المحفظة</string>
+    <string name="join_with_facebook">التسجيل باستخدام فيسبوك</string>
 </resources>
