--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -485,9 +485,9 @@
     <string name="un_friend_message"> Removing a friend will stop you following each other.</string>
     <string name="un_friend_title">Are you sure you want to remove this friend?</string>
 
-    <string name="read_more">Read more</string>
+    <string name="read_more_closed">Read more  &gt;</string>
+    <string name="read_more_open">Read more  &lt;</string>
     <string name="unnamed_chat">Unnamed Chat</string>
-
 
     <string name="permission_storage_rationale">You need to enable Write permission.</string>
     <string name="permission_storage_denied">You need to enable Write permission in settings </string>
