--- a/SportsSideKick/app/src/brugge/res/values/strings.xml
+++ b/SportsSideKick/app/src/brugge/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Brugge FC App</string>
-    <string name="facebook_app_id" translatable="false">102782376855276</string>
+    <string name="facebook_app_id" translatable="false">102782376855276-TODO-CHANGE</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb102782376855276</string>
 </resources>
