--- a/SportsSideKick/app/src/brugge/res/values/strings.xml
+++ b/SportsSideKick/app/src/brugge/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name" translatable="false">Brugge FC App</string>
     <string name="facebook_app_id" translatable="false">102782376855276-TODO-CHANGE</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb102782376855276</string>
+    <string name="login_slider_text_1_phone"><![CDATA[ Bringing <font color="#000000"> Fans </font> Together</font>]]></string>
+
 </resources>
