--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -389,4 +389,5 @@
     <string name="your_statement">تصريحك</string>
     <string name="your_wallet">المحفظة</string>
     <string name="join_with_facebook">التسجيل باستخدام فيسبوك</string>
+    <string name="record_video">تسجيل الفيديو</string>
 </resources>
