--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -10,7 +10,10 @@
     <!-- Sign in/ Sign up screen -->
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Login</string>
-    <string name="login_slider_text_1_phone"><![CDATA[ Bringing <font color="#c3ff01"> Fans </font> Together</font>]]></string>
+    <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01"> fans </font> together</string>
+    <string name="bringing">Bringing </string>
+    <string name="fans"> fans </string>
+    <string name="together"> together</string>
     <string name="login_login_email">Email</string>
     <string name="login_login_password">Password</string>
     <string name="login_login_forgot_text">Forgot?</string>
