--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -526,5 +526,6 @@
     <string name="single_user_is_typing">%1$s! is typing...</string>
     <string name="multiple_users_are_typing">Multiple users are typing...</string>
     <string name="record_video">Record Video</string>
+    <string name="translate">Translate</string>
 
 </resources>
