Mute Chat implemented.

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -512,6 +512,8 @@
     <string name="cant_start_video">Can\'t start video.</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="alerts_on">Alerts-ON</string>
+    <string name="alerts_off">Alerts-OFF</string>
     <string name="search">Search</string>
     <string name="news">NEWS</string>
     <string name="pin_count_placeholder" translatable="false">--</string>
