Implemented create post functionality.

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -353,6 +353,7 @@
     <string name="chat">Chat</string>
     <string name="more">More</string>
     <string name="posts">Posts</string>
+    <string name="post">Post</string>
     <string name="comments">Comments</string>
     <string name="friend_you_and">Friend you and</string>
     <string name="have_in_common">have in common</string>
