colored pin indicator

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -429,9 +429,10 @@
     <string name="reset">Reset</string>
     <string name="offline">offline</string>
     <string name="watch_promo" translatable="false">Watch promo</string>
-    <string name="single_user_is_typing">%1$s! is typing...</string>
-    <string name="multiple_users_are_typing">Multiple users are typing...</string>
+    <string name="single_user_is_typing">%1$s! is typing…</string>
+    <string name="multiple_users_are_typing">Multiple users are typing…</string>
     <string name="record_video">Record Video</string>
     <string name="translate">Translate</string>
+    <string name="hint_sharing_message">Enter a message with your shared post…</string>
 
 </resources>
