--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -1,8 +1,7 @@
 <resources>
 
     <string name="friend_requests">Friend Requests</string>
-    <string name="this_language">Russian</string>
-
+    <string name="this_language">Русский</string>
 
     <!-- Login screen -->
     <string name="login_sign_up">Sign up</string>
@@ -78,7 +77,7 @@
     <string name="chosen_language">Chosen language</string>
     <string name="your_statement">Your Statement</string>
     <string name="choose_your_language">Choose your language</string>
-    <string name="english">English</string>
+
     <string name="friend_profile">Friend Profile</string>
     <string name="member_since">Member since</string>
     <string name="follows_you">Follows you</string>
